syntax = "proto3";

package calculator;

option go_package="./calculator/calculatorpb";


message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

// message SumRequest {
//   Calculator calculator = 1;
// }

message SumResponse {
  int32 sum_result = 1;
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  int32 result = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double number_root = 1;
}

service CalculatorService {
  // Unary API
  // the name of your API should be what the Request and Response will be named by
  rpc Sum (SumRequest) returns (SumResponse) {};

  // Client Streaming
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {}

  // Square root to show errors
  // Error handling
  // - This RPC will throw exception if a negative number is sent
  // - If the error being sent is INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {}
}